--- a/students/havrylova_kateryna/09_selectors/css/style.css
+++ b/students/havrylova_kateryna/09_selectors/css/style.css
@@ -46,15 +46,18 @@ body {
 .skills_name {
     color: #828282;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 700;
 }
 
 .button {
     background-color: black;
     color: #FFF;
     font-size: 18px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: Open Sans;
     font-weight: 700;
+    letter-spacing: 1.8px;
+    border-radius: 20px;
+    padding: 10px 20px;
 }
 
 .line {
@@ -62,7 +65,7 @@ body {
     width: 940px;
 }
 
-.about {
+.bcgr-grey {
     background: #F6F6F6;
     width: 100%;
 
@@ -89,5 +92,51 @@ body {
 
 .list__item {
     display: inline-block;
+    width: 24%;
+    box-sizing: border-box;
     margin: 0 auto;
+    padding-top: 78px;
+}
+
+img {
+    max-width: 100%;
+}
+
+.pt100 {
+    padding-top: 100px;
+}
+
+.pb67 {
+    padding-bottom: 67px;
+}
+
+.link {
+    color: #070707;
+}
+
+.mb100 {
+    margin-bottom: 100px;
+}
+
+.pb100 {
+    padding-bottom: 100px;
+}
+
+.null-border {
+    margin: 0;
+    padding: 0;
+}
+
+.w480 {
+    width: 480px;
+    margin: 0 auto;
+}
+
+.pt44 {
+    padding-top: 44px;
+}
+
+.contacts p:last-child {
+    color: #828282;
+    font-size: 14px;
 }
