--- a/students/motkaliuk_andrii/09_css_selectors/css/styles.css
+++ b/students/motkaliuk_andrii/09_css_selectors/css/styles.css
@@ -1,4 +1,12 @@
-p {
+h2~p {
+    color: #070707;
+    text-align: center;
+    font-size: 18px;
+    font-family: Open Sans, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+}
+
+a[class="portfolio_links"] {
     color: #070707;
     text-align: center;
     font-size: 18px;
@@ -45,6 +53,15 @@ main {
 
 .portfolio {
     background-color: #F6F6F6;
+}
+
+.stars {
+    display: inline-block;
+    margin-right: 9px
+}
+
+.last_star {
+    display: inline-block
 }
 
 .skills_signature {
