--- a/students/kukuruza_maxim/08_css/css/style.css
+++ b/students/kukuruza_maxim/08_css/css/style.css
@@ -1,153 +1,172 @@
-*{
-    margin: 0;
-    padding: 0 ;
-    box-sizing: border-box;
-    /* transition: .2s linear; */
-    /* text-decoration: none; */
-    text-transform: none;
-}
-/* Body */
-/* body{
-width: 950px;
-margin: auto;
-} */
-
 /* Header */
-header{
-    width: 950px;
-margin: auto;
+header {
+    width: 940px;
+    margin: auto;
 }
-nav{
-    box-shadow: 0px 5px 4px -3px rgba(0,0,0,0.25);
+
+nav {
+    max-width: 940px;
+    box-shadow: 0px 5px 4px -3px rgba(0, 0, 0, 0.25);
     border-bottom: 2px solid #828282;
 }
+
 ul {
     list-style: none;
-    height: 70px;
+    height: 40px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
-ul li a{
-    text-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+
+ul li a {
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-size: 18px;
     color: #828282;
     text-decoration: none;
 }
-.active{
+
+.active {
     color: #070707;
 }
+
 /* Main */
-/* main{
+.content {
     display: flex;
     flex-direction: column;
-    gap: 100px;
-} */
-.content{
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
     text-align: center;
-    width: 1150px;
+    width: 940px;
     margin: auto;
-    padding: 100px;
+    padding: 100px 0px 100px 0px;
 }
-.wrapper{
+
+.wrapper {
     display: flex;
     flex-direction: column;
     gap: 35px;
     margin-bottom: 40px;
 }
-h1{
+
+h1 {
     color: #070707;
     font-size: 47px;
 }
-h2{
+
+h2 {
     color: #070707;
     font-size: 34px;
 }
-p{
+
+p {
     font-size: 18px;
 }
+
 .hero {
     display: flex;
     flex-direction: column;
-    gap: 35px;
-    text-align: center;
-    width: 1150px;
+    align-items: center;
+    width: 940px;
     margin: auto;
-    padding: 0px 100px 100px 100px;
-    margin-top: 35px;
+    padding: 0px 0px 100px 0px;
 }
-.hero img{
+
+.hero img {
     width: 100%;
 }
-.about-me{
+
+.hero h1 {
+    font-size: 60px;
+    margin: 35px;
+}
+
+.about-me {
     background-color: #f6f6f6;
     background-size: 100vw 100vh;
     text-align: center;
     align-items: center;
 }
-.description{
+
+.description {
     color: #070707;
     width: 480px;
     display: flex;
     flex-direction: column;
-    gap: 60px;
     margin: auto;
 }
-.container{
+
+.container {
     font-weight: bold;
     font-size: 14px;
-    color:#828282;
+    color: #828282;
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: center;
     justify-content: space-between;
 }
-.container p{
+
+.container p {
     font-size: 14px;
 }
-.stars{
+
+.stars {
     margin-top: 40px;
     display: flex;
     flex-direction: row;
     gap: 15px;
 }
-.programs{
+
+.programs {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-top: 40px;
 }
-.portfolio{
+
+.portfolio {
     background-color: #f6f6f6;
     display: flex;
     flex-direction: column;
+}
+
+.portfolio .content {
+    gap: 166px;
 
 }
-.portfolio h2{
+
+.portfolio h2 {
     padding-bottom: 50px;
 }
-.portfolio p{
-    color:#070707;
+
+.portfolio p {
+    color: #070707;
 }
 
 /* Footer */
-button{
-    margin: auto;
+footer {
+    height: 670px;
+}
+
+.footer-links {
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
+}
+
+button {
+    margin: 0 auto;
     border-radius: 20px;
     background-color: #070707;
     color: #f6f6f6;
-    font-size: 18px;
+    font-size: 20px;
+    letter-spacing: 1.5px;
+    text-align: center;
     width: 180px;
     height: 42px;
     cursor: pointer;
 }
-.social{
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-    cursor: pointer;
 
+.social {
+    display: flex;
+    gap: 60px;
+    justify-content: center;
 }
