--- a/students/umienchuk_oksana/09_css/css/styles.css
+++ b/students/umienchuk_oksana/09_css/css/styles.css
@@ -1,104 +1,83 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-.header {
-    background-color: yellowgreen;
-    padding: 20px;
-}
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
+body,
+.site_link {
     font-size: 18px;
-    line-height: 1.3;
+    font-family: Open Sans, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    color: #070707;
+    text-align: center;
 }
 
-/* .header .nav {
-    background-color: red;
-} */
-
-/* .header>.nav {
-    background-color: black;
-} */
-
-/* li+li a {
-    background-color: gold;
-    text-decoration: none;
-} */
-
-/* li~li a {
-    background-color: gold;
-    text-decoration: none;
-} */
-
-/* .header .menu__item.active .menu__link {
-    color: red;
-} */
-
-[href*="home"] {
-    background-color: red;
-}
-
-[href*="home"]:hover {
-    background-color: white;
-}
-
-.menu {
+ul {
     list-style-type: none;
 }
 
-.menu__item::before {
-    content: attr(data-text);
-    /* display: inline-block;
-    width: 10px;
-    height: 10px;
-    background-color: brown;
-    border-radius: 50%; */
-}
-
-.menu__link::after {
-    content: ' ' attr(href);
-}
-
-.menu__link:active {
-    color: green;
-}
-
-.menu__link:focus {
-    font-weight: 900;
-}
-
-.menu__item:hover {
-    background-color: azure;
-}
-
-.menu__item:hover .menu__link {
-    text-decoration: underline;
-}
-
-.menu__link {
-    display: block;
+nav a:link {
+    color: #828282;
     text-decoration: none;
 }
 
-.menu__link:hover {
+nav a:visited {
+    color: #828282;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #070707;
+    font-weight: 600;
+}
+
+nav a:focus {
+    color: #070707;
+    font-weight: 600;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 700;
+}
+
+h2 {
+    font-size: 34px;
+    font-weight: 700;
+}
+
+.skills_item figure>figcaption {
+    color: #828282;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+footer p:nth-child(5) {
+    color: #828282;
+    font-size: 14px;
+}
+
+button {
+    background-color: #070707;
+    width: 180px;
+    height: 44px;
+    padding: 0px 16px;
+    border-radius: 22px;
+}
+
+button:hover {
+    background-color: #828282;
+    border-color: #828282;
+}
+
+span {
+    color: white;
+    letter-spacing: 1.8px;
+    font-weight: 700;
+}
+
+ul[class$="list"] {
+    display: flex;
+    justify-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: #070707;
     text-decoration: underline;
-}
-
-
-.one {
-    background-color: red;
-    width: 100px;
-    height: 100px;
-}
-
-.two {
-    background-color: yellow;
-    height: 0;
-    transition: height .5s ease-in-out;
-}
-
-.one:hover .two {
-    height: 100%;
 }
