--- a/students/kukuruza_maxim/08_css/css/style.css
+++ b/students/kukuruza_maxim/08_css/css/style.css
@@ -1,3 +1,7 @@
+* {
+    transition: all .1s ease-in;
+}
+
 /* Header */
 header {
     width: 940px;
@@ -10,13 +14,40 @@ nav {
     border-bottom: 2px solid #828282;
 }
 
+
+
 ul {
     list-style: none;
-    height: 40px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    height: 50px;
+    width: 100%;
+    padding: 25px 0px 0px;
+    margin: 0 auto;
 }
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.menu {
+    font-size: 0px;
+}
+
+.menu .menu__item {
+    display: inline-block;
+    box-sizing: border-box;
+    text-align: center;
+    width: 20%;
+    font-size: 18px;
+
+}
+
+.menu .menu__item .menu__link {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
 
 ul li a {
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -25,14 +56,8 @@ ul li a {
     text-decoration: none;
 }
 
-.active {
-    color: #070707;
-}
-
 /* Main */
 .content {
-    display: flex;
-    flex-direction: column;
     text-align: center;
     width: 940px;
     margin: auto;
@@ -40,9 +65,7 @@ ul li a {
 }
 
 .wrapper {
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
+
     margin-bottom: 40px;
 }
 
@@ -61,8 +84,6 @@ p {
 }
 
 .hero {
-    display: flex;
-    flex-direction: column;
     align-items: center;
     width: 940px;
     margin: auto;
@@ -88,8 +109,7 @@ p {
 .description {
     color: #070707;
     width: 480px;
-    display: flex;
-    flex-direction: column;
+
     margin: auto;
 }
 
@@ -97,11 +117,9 @@ p {
     font-weight: bold;
     font-size: 14px;
     color: #828282;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    justify-content: space-between;
+
+    display: inline-block;
+    padding: 28px;
 }
 
 .container p {
@@ -110,28 +128,24 @@ p {
 
 .stars {
     margin-top: 40px;
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
+    display: inline-block;
+
+}
+
+.stars img {
+    padding: 5px;
 }
 
 .programs {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+
     margin-top: 40px;
 }
 
 .portfolio {
     background-color: #f6f6f6;
-    display: flex;
-    flex-direction: column;
-}
-
-.portfolio .content {
-    gap: 166px;
 
 }
+
 
 .portfolio h2 {
     padding-bottom: 50px;
@@ -146,11 +160,6 @@ footer {
     height: 670px;
 }
 
-.footer-links {
-    display: flex;
-    flex-direction: column;
-    gap: 45px;
-}
 
 button {
     margin: 0 auto;
@@ -166,7 +175,28 @@ button {
 }
 
 .social {
-    display: flex;
-    gap: 60px;
-    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+/* pseudo */
+a:focus {
+    color: #070707;
+}
+
+a:hover {
+    font-weight: 600;
+    transition: .2s linear;
+}
+
+.social a:hover {
+    opacity: 0.5;
+    transition: .2s linear;
+    transition-delay: 0;
+}
+
+[type="button"]:hover {
+    border: 2px solid #070707;
+    background: #f6f6f6;
+    color: #070707;
 }
