--- a/students/kukuruza_maxim/07_html/css/style.css
+++ b/students/kukuruza_maxim/07_html/css/style.css
@@ -1,153 +1,202 @@
-*{
-    margin: 0;
-    padding: 0 ;
-    box-sizing: border-box;
-    /* transition: .2s linear; */
-    /* text-decoration: none; */
-    text-transform: none;
+* {
+    transition: all .1s ease-in;
 }
-/* Body */
-/* body{
-width: 950px;
-margin: auto;
-} */
 
 /* Header */
-header{
-    width: 950px;
-margin: auto;
+header {
+    width: 940px;
+    margin: auto;
 }
-nav{
-    box-shadow: 0px 5px 4px -3px rgba(0,0,0,0.25);
+
+nav {
+    max-width: 940px;
+    box-shadow: 0px 5px 4px -3px rgba(0, 0, 0, 0.25);
     border-bottom: 2px solid #828282;
 }
+
+
+
 ul {
     list-style: none;
-    height: 70px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    height: 50px;
+    width: 100%;
+    padding: 25px 0px 0px;
+    margin: 0 auto;
 }
-ul li a{
-    text-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.menu {
+    font-size: 0px;
+}
+
+.menu .menu__item {
+    display: inline-block;
+    box-sizing: border-box;
+    text-align: center;
+    width: 20%;
+    font-size: 18px;
+
+}
+
+.menu .menu__item .menu__link {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+
+ul li a {
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-size: 18px;
     color: #828282;
     text-decoration: none;
 }
-.active{
-    color: #070707;
-}
+
 /* Main */
-/* main{
-    display: flex;
-    flex-direction: column;
-    gap: 100px;
-} */
-.content{
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
+.content {
     text-align: center;
-    width: 1150px;
+    width: 940px;
     margin: auto;
-    padding: 100px;
+    padding: 100px 0px 100px 0px;
 }
-.wrapper{
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
+
+.wrapper {
+
     margin-bottom: 40px;
 }
-h1{
+
+h1 {
     color: #070707;
     font-size: 47px;
 }
-h2{
+
+h2 {
     color: #070707;
     font-size: 34px;
 }
-p{
+
+p {
     font-size: 18px;
 }
+
 .hero {
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
-    text-align: center;
-    width: 1150px;
+    align-items: center;
+    width: 940px;
     margin: auto;
-    padding: 0px 100px 100px 100px;
-    margin-top: 35px;
+    padding: 0px 0px 100px 0px;
 }
-.hero img{
+
+.hero img {
     width: 100%;
 }
-.about-me{
+
+.hero h1 {
+    font-size: 60px;
+    margin: 35px;
+}
+
+.about-me {
     background-color: #f6f6f6;
     background-size: 100vw 100vh;
     text-align: center;
     align-items: center;
 }
-.description{
+
+.description {
     color: #070707;
     width: 480px;
-    display: flex;
-    flex-direction: column;
-    gap: 60px;
+
     margin: auto;
 }
-.container{
+
+.container {
     font-weight: bold;
     font-size: 14px;
-    color:#828282;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    justify-content: space-between;
+    color: #828282;
+
+    display: inline-block;
+    padding: 28px;
 }
-.container p{
+
+.container p {
     font-size: 14px;
 }
-.stars{
+
+.stars {
     margin-top: 40px;
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-}
-.programs{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.portfolio{
-    background-color: #f6f6f6;
-    display: flex;
-    flex-direction: column;
+    display: inline-block;
 
 }
-.portfolio h2{
+
+.stars img {
+    padding: 5px;
+}
+
+.programs {
+
+    margin-top: 40px;
+}
+
+.portfolio {
+    background-color: #f6f6f6;
+
+}
+
+
+.portfolio h2 {
     padding-bottom: 50px;
 }
-.portfolio p{
-    color:#070707;
+
+.portfolio p {
+    color: #070707;
 }
 
 /* Footer */
-button{
-    margin: auto;
+footer {
+    height: 670px;
+}
+
+
+button {
+    margin: 0 auto;
     border-radius: 20px;
     background-color: #070707;
     color: #f6f6f6;
-    font-size: 18px;
+    font-size: 20px;
+    letter-spacing: 1.5px;
+    text-align: center;
     width: 180px;
     height: 42px;
     cursor: pointer;
 }
-.social{
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-    cursor: pointer;
 
+.social {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+/* pseudo */
+a:focus {
+    color: #070707;
+}
+
+a:hover {
+    font-weight: 600;
+    transition: .2s linear;
+}
+
+.social a:hover {
+    opacity: 0.5;
+    transition: .2s linear;
+    transition-delay: 0;
+}
+
+[type="button"]:hover {
+    border: 2px solid #070707;
+    background: #f6f6f6;
+    color: #070707;
 }
