--- a/students/havrylova_kateryna/11_flexbox/css/style.css
+++ b/students/havrylova_kateryna/11_flexbox/css/style.css
@@ -1,3 +1,57 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
+body {
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    color: #544837;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+}
+
+.menu {
+    list-style-type: none;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    color: #2F281E;
+    font-weight: 400;
+    line-height: 28px;
+    padding-right: 20px;
+}
+
+.first-menu {
+    color: #FF9900;
+}
+
+.in {
+    color: #2F281E;
+    font-size: 16px;
+    font-family: Montserrat;
+    font-weight: 600;
+    border-radius: 4px;
+    border: 1px solid #BCD0E5;
+    background-color: #FFF;
+    margin-right: 32px;
+    padding: 13px 25px;
+}
+
+.up {
+    color: #FFF;
+    font-size: 16px;
+    font-family: Montserrat;
+    font-weight: 600;
+    border-radius: 4px;
+    border: 1px solid #FF9900;
+    background-color: #FF9900;
+    padding: 13px 25px;
+}
+
+.img__logo {
+    padding: 5.5px;
+}
+
 .menu__container,
 .logo,
 .menu,
@@ -6,4 +60,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.section1 {
+    margin-top: 87px;
 }
