added body wight

--- a/students/havrylova_kateryna/11_flexbox/css/style.css
+++ b/students/havrylova_kateryna/11_flexbox/css/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
+.body_container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
+}
+
+
 body {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     color: #544837;
