--- a/students/motkaliuk_andrii/10_css_box_model/productly/css/styles.css
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/css/styles.css
@@ -167,7 +167,7 @@
     width: 320px;
     height: 50px;
     color: #BCD0E5;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
