--- a/students/hridina_anastasiia/10_boxmodel/productly/style.css
+++ b/students/hridina_anastasiia/10_boxmodel/productly/style.css
@@ -65,7 +65,7 @@
 }
 
 .footer {
-    max-width: 1200px;
+    max-width: 1440px;
     padding: 70px 120px;
 }
 
@@ -75,26 +75,15 @@
 
 .block__one,
 .block__two {
-    text-align: left;
-    float: left;
-    padding: 30px;
+    line-height: 30px;
+    display: inline-block;
     margin: 0 auto;
+    padding-left: 160px;
 }
 
-.block__one,
-.block__two::after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-.quick__links {
-    display: inline-block;
-    list-style-type: none;
-}
-
+.quick__links,
 .legal__staff {
-    display: inline-block;
+    display: inline;
     list-style-type: none;
 }
 
@@ -103,16 +92,9 @@
 }
 
 .input {
-    float: right;
     width: 340px;
     padding-bottom: 30px;
     box-sizing: border-box;
-}
-
-.input::after {
-    content: '';
-    display: block;
-    clear: both;
 }
 
 .button3 {
@@ -122,13 +104,12 @@
     border-radius: 4px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
-    margin-left: 32px;
+    display: inline;
 }
 
 .buttons {
-    max-width: 340px;
     float: right;
+    width: 28%;
 }
 
 input[type=number] {
