--- a/students/tiselko_iryna/class_works/11_flex/styles/styles.css
+++ b/students/tiselko_iryna/class_works/11_flex/styles/styles.css
@@ -1,7 +1,33 @@
+@font-face {
+    font-display: swap; 
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/roboto-v30-latin-regular.woff2') format('woff2'); 
+}
+
+@font-face {
+    font-display: swap; 
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    src: url('./fonts/roboto-v30-latin-500.woff2') format('woff2'); 
+}
+
+
 * {
     padding: 0;
     margin: 0;
 }
+
+body {
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1.625;
+}
+
 .container {
     max-width: 1000px;
     margin: 0 auto;
@@ -18,9 +44,7 @@
 .col-4 {
     width: calc(100% / 12 * 4);
 }
-.product {
-    background-color: antiquewhite;
-}
+
 [class*="col-"] {
     padding: 15px;
     box-sizing: border-box;
@@ -29,3 +53,177 @@ img {
     max-width: 100%;
 }
 
+.product {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.product__title {
+    font-weight: 500;
+    margin-bottom: 15px;
+    font-size: 18px;
+    height: 58.5px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; 
+}
+
+.product__rate {
+    margin-bottom: 15px;
+}
+
+.rate {
+    display: flex;
+    align-items: center;
+}
+
+.rate__image {
+    margin-right: 15px;
+}
+
+.hover {
+    position: absolute;
+    top: 25px;
+    left: 0;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+}
+
+.rate__link {
+    position: relative;
+}
+
+.rate__link:hover .hover {
+    opacity: 1;
+    background-color: #d3ebfc;
+    border: 1px solid black;
+}
+
+.product__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.price-box__old-price {
+    text-decoration: line-through;
+    color: #888;
+    font-size: 14px;
+}
+
+.price-box__final-price {
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 25px;
+}
+
+.price-box__old-price + .price-box__final-price {
+    color: red;
+    margin-top: 0;
+}
+
+.qty {
+    width: 85px;
+}
+
+.qty__label {
+    font-size: 11px;
+}
+
+.qty__wrapper {
+    display: flex;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.qty__btn {
+    border: none;
+    background: none;
+    width: 25px;
+    height: 25px;
+}
+
+.qty__input {
+    width: calc(100% - 50%);
+    appearance: none;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+}
+
+.qty__input::-webkit-outer-spin-button,
+.qty__input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.qty__input {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+.product__label {
+    margin-bottom: 15px;
+}
+
+.label {
+    list-style-type: none;
+    display: flex;
+    gap: 15px;
+}
+
+
+.label__item {
+    width: 35px;
+}
+
+.product__action {
+    display: flex;
+    gap: 15px;
+    /* margin-top: auto; */
+    flex-grow: 1;
+    align-items: flex-end;
+}
+
+.btn-primary product__btn-primary {
+    flex-grow: 1;
+}
+
+.btn-primary, 
+.btn-secondary {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    font-size: 14px;
+    height: 42px;
+}
+
+button, 
+input {
+    font-size: inherit;
+    font-family: inherit;
+    line-height: inherit;
+}
+
+.btn-primary {
+    background-color: #009f36;
+    color: #fff;
+}
+
+.btn-secondary {
+    background-color: #67bdfc;
+    width: 42px;
+}
+
+.btn-secondary > span {
+    width: 1px;
+    height: 1px;
+    position: absolute;
+    overflow: hidden;
+    margin: -1px;
+}
