--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/css/styles.css
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/css/styles.css
@@ -5,6 +5,10 @@
     width: 100%;
     padding: 0 120px;
     box-sizing: border-box;
+    background-image: url(../images/curve.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 2100px;
 }
 
 .header_container {
@@ -12,6 +16,7 @@
     font-size: 0px;
     max-width: 1200px;
     width: 100%;
+    height: 80px;
 }
 
 .emblem {
@@ -93,8 +98,149 @@
     font-weight: 600;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+.design_container {
+    display: flex;
+    height: 665px;
+}
+
+.design_item1 {
+    padding-top: 170px;
+    width: 45%;
+}
+
+.design_item2 {
+    width: 55%;
+    padding-top: 70px;
+    padding-left: 30px;
+}
+
+.design_header {
+    color: #2F281E;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 54px;
+}
+
+
+.design_item_content {
+    padding-top: 30px;
+    color: #544837;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.button_container {
+    padding-top: 30px;
+}
+
+.get_started_button {
+    width: 180px;
+    height: 50px;
+    border-radius: 4px;
+    border: none;
+    background: #F90;
+    color: #FFF;
+    text-align: center;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.we_design_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: flex-start;
+    height: 510px;
+    /* width: 100%; */
+
+
+}
+
+.we_design_header {
+    width: 100%;
+    display: inline-block;
+    color: #2F281E;
+    text-align: center;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.2em;
+    padding-bottom: 50px;
+}
+
+.we_disign_item {
+    width: 25%;
+    max-height: 175px;
+}
+
+.we_design_item_header {
+    padding-top: 35px;
+    color: #2F281E;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.we_design_content {
+    padding-top: 20px;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 26px;
+}
+
+.we_disign_button_container {
+    width: 100%;
+    max-height: 175px;
+    align-self: flex-start;
+    padding-top: 75px;
+    padding-left: calc(50% - 90px);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .footer_container {
-    font-size: 0px;
+    display: flex;
     max-width: 1200px;
     width: 100%;
 }
@@ -110,22 +256,19 @@
 
 .footer_icon {
     display: inline-block;
-    width: 20%;
+    width: 26%;
 }
 
 .quick_links_block {
-    width: 20%;
-    padding-left: 90px;
+    width: 22%;
+    padding-left: 20px;
 }
 
 .legal_stuff_block {
-    width: 20%;
-    padding-left: 25px;
+    width: 22%;
 }
 
-.input_place {
-    padding-left: 25px;
-}
+.input_place {}
 
 .footer_headers {
     color: #2F281E;
