--- a/students/linov_mykhailo/10_box-model/productly/css/styles.css
+++ b/students/linov_mykhailo/10_box-model/productly/css/styles.css
@@ -1,5 +1,50 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+@font-face {
+    font-display: swap;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/montserrat-v25-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    src: url('./fonts/montserrat-v25-latin-500.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    src: url('./fonts/montserrat-v25-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    src: url('./fonts/montserrat-v25-latin-700.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/poppins-v20-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    src: url('./fonts/poppins-v20-latin-700.woff2') format('woff2');
+}
 
 * {
     margin: 0;
@@ -7,7 +52,7 @@
 }
 
 body {
-    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     color: #544837;
     line-height: 28px;
 }
@@ -15,22 +60,27 @@ body {
 .container {
     padding: 17px 120px;
     height: 80px;
-    height: 1200px;
+    width: 1440px;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
-.logo {
+.logo__image {
     float: left;
     width: 200px;
     height: 32px;
-}
-
-.alink {
-    display: inline-block;
+    padding: 7px 0;
 }
 
 .header_buttons {
     float: right;
-    max-width: 250px;
+    width: 250px;
+    height: 46px;
+}
+
+.signbutton {
+    width: 110px;
+    display: inline-block;
 }
 
 li {
@@ -39,7 +89,12 @@ li {
 
 nav {
     text-align: center;
-    width: calc(100% - 205px - 245px);
+    width: calc(100% - 200px - 252px);
+}
+
+ul.nav {
+    height: 28px;
+    padding: 9px 0;
 }
 
 .nav>li {
@@ -51,10 +106,14 @@ nav {
     padding-right: 0;
 }
 
+.alink {
+    display: inline-block;
+}
+
 a {
     text-decoration: none;
     color: #2F281E;
-    line-height: 28px;
+    font-size: 16px;
 }
 
 .orange {
@@ -63,57 +122,89 @@ a {
 
 .sign_in,
 .sign_up {
-    font-weight: 600;
-    padding: 13px 25px;
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
+    font-weight: 600;
+    height: 46px;
+    width: 110px;
+    padding: 13px 25px;
     border-radius: 4px;
     box-sizing: border-box;
 }
 
 .sign_in {
-    height: 46px;
-    width: 110px;
     border: 1px solid #BCD0E5;
-    margin-right: 11px;
     background-color: #FFFFFF;
+    color: #2F281E;
 }
 
 .sign_up {
+    border: 1px solid #F90;
     background-color: #F90;
     color: #FFFFFF;
-    height: 46px;
-    width: 114px;
-    border: none;
-    margin-left: 10px;
+    margin-left: 32px;
 }
+
+.main {
+    height: 500px;
+}
+
+/* footer */
 
 .footcont {
     width: 1200px;
-    height: 349px;
+    height: 209px;
     margin: 0 auto;
+    padding: 70px 0;
 }
 
-.footcont::after {
-    content: '';
-    clear: both;
-    display: block;
+.footone,
+.foottwo {
+    float: left;
+    height: 209px;
+    padding-right: 125px;
+}
+
+
+
+.footone {
+    width: 200px;
+}
+
+.foottwo {
+    width: 135px;
+}
+
+.footthree {
+    float: left;
+    width: 340px;
 }
 
 h3 {
-    font-family: "Gotham", Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
     color: #2F281E;
 }
 
-.col-4 {
-    width: 25%;
-    float: left;
+.quicklinks__list,
+.footer-nav {
+    padding-top: 30px;
+}
+
+.quicklinks__list>li,
+.footer-nav>li {
+    padding-top: 15px;
+}
+
+.quicklinks__list>li:first-child,
+.footer-nav>li:first-child {
+    padding-top: 0px;
 }
 
 .footer-nav a {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-weight: 500;
     line-height: 26px;
     color: #544837;
@@ -125,11 +216,12 @@ h3 {
     padding: 0 10px;
     border-radius: 4px;
     border: 1px solid #BCD0E5;
+    margin: 25px 0;
 }
 
 ::placeholder {
     color: #BCD0E5;
-    font-family: Montserrat;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
 }
 
@@ -142,7 +234,7 @@ h3 {
     border-radius: 4px;
     font-weight: 700;
     padding: 13px 25px;
-    font-family: Poppins, Montserrat, Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     box-sizing: border-box;
 }
