--- a/students/motkaliuk_andrii/09_css_selectors/css/styles.css
+++ b/students/motkaliuk_andrii/09_css_selectors/css/styles.css
@@ -1,31 +1,29 @@
-h2~p {
+bodY {
+    font-family: Open Sans, Arial, Helvetica, sans-serif;
     color: #070707;
+}
+
+h2~p {
     text-align: center;
     font-size: 18px;
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
+
     font-weight: 400;
 }
 
 a[class="portfolio_links"] {
-    color: #070707;
     text-align: center;
     font-size: 18px;
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
 
 h1 {
-    color: #070707;
     font-size: 47.339px;
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
     font-weight: 700;
 }
 
 h2 {
-    color: #070707;
     text-align: center;
     font-size: 34px;
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
     font-weight: 700;
 }
 
@@ -33,7 +31,6 @@ nav {
     color: #828282;
     font-style: normal;
     font-size: 18px;
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
     font-weight: 400;
 
 }
@@ -68,7 +65,6 @@ main {
     color: #828282;
     text-align: center;
     font-size: 14px;
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
 
@@ -81,7 +77,6 @@ main {
     color: #FFF;
     text-align: center;
     font-size: 18px;
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
     font-weight: 700;
     letter-spacing: 1.8px;
 }
@@ -90,6 +85,5 @@ footer>p {
     color: #828282;
     text-align: center;
     font-size: 14px;
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
     font-weight: 400;
 }
