--- a/students/motkaliuk_andrii/10_css_box_model/productly/css/styles.css
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/css/styles.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    color: #2F281E;
+}
+
 .site_container {
     display: block;
     margin: 0 auto;
@@ -35,7 +40,6 @@
 .navigation_item>a {
     text-decoration: none;
     color: #2F281E;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 28px;
@@ -65,11 +69,11 @@
 .sign_in_button {
     height: 46px;
     width: 110px;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    color: #2F281E;
     background-color: #FFF;
     border-radius: 4px;
     border: 1px solid #BCD0E5;
-    color: #2F281E;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -83,11 +87,11 @@
 .sign_up_button {
     height: 46px;
     width: 110px;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     background-color: #F90;
     border-radius: 4px;
     border: 1px solid #F90;
     color: #FFF;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -128,8 +132,6 @@
 }
 
 .footer_headers {
-    color: #2F281E;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
@@ -149,7 +151,6 @@
 .legal_stuff_item {
     color: #544837;
     text-decoration: none;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 2.6em;
@@ -167,7 +168,6 @@
     width: 320px;
     height: 50px;
     color: #BCD0E5;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
