--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/css/styles.css
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/css/styles.css
@@ -1,22 +1,25 @@
-.site_container {
-    display: block;
+body {
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    color: #2F281E;
+}
+
+.container {
     margin: 0 auto;
     max-width: 1440px;
     width: 100%;
     padding: 0 120px;
     box-sizing: border-box;
-    background-image: url(../images/curve.svg);
-    background-position: center;
+    /* background-image: url(../images/curve.svg);
+    background-position: bottom;
     background-repeat: no-repeat;
-    height: 2100px;
+    background-size: contain;
+    background-position: bottom 100px; */
 }
 
 .header_container {
     display: inline-block;
     font-size: 0px;
-    max-width: 1200px;
     width: 100%;
-    height: 80px;
 }
 
 .emblem {
@@ -24,7 +27,7 @@
     text-align: left;
     vertical-align: top;
     width: calc(100% / 5);
-    padding-top: 25px;
+    padding-top: 10px;
 }
 
 .navigation_list {
@@ -40,10 +43,9 @@
 .navigation_item>a {
     text-decoration: none;
     color: #2F281E;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 400;
-    line-height: 28px;
+    line-height: 0px;
 }
 
 .navigation_item:first-child {
@@ -67,17 +69,20 @@
     padding-left: 197px;
 }
 
-.sign_in_button {
-    height: 46px;
-    width: 110px;
-    background-color: #FFF;
-    border-radius: 4px;
-    border: 1px solid #BCD0E5;
-    color: #2F281E;
+button {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
+    border-radius: 4px;
+}
+
+.sign_in_button {
+    height: 46px;
+    width: 110px;
+    background-color: #FFF;
+    border: 1px solid #BCD0E5;
+    color: #2F281E;
 }
 
 .sign_up {
@@ -92,27 +97,13 @@
     border-radius: 4px;
     border: 1px solid #F90;
     color: #FFF;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
+/* The design container */
 .design_container {
     display: flex;
-    height: 665px;
+    padding-top: 15px;
+    padding-bottom: 100px;
 }
 
 .design_item1 {
@@ -127,8 +118,6 @@
 }
 
 .design_header {
-    color: #2F281E;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 44px;
     font-weight: 700;
     line-height: 54px;
@@ -138,7 +127,6 @@
 .design_item_content {
     padding-top: 30px;
     color: #544837;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 28px;
@@ -161,29 +149,13 @@
     font-weight: 700;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* We design container */
 .we_design_container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: flex-start;
-    height: 510px;
-    /* width: 100%; */
-
-
+    padding-bottom: 75px;
 }
 
 .we_design_header {
@@ -191,7 +163,6 @@
     display: inline-block;
     color: #2F281E;
     text-align: center;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.2em;
@@ -205,15 +176,12 @@
 
 .we_design_item_header {
     padding-top: 35px;
-    color: #2F281E;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 22px;
     font-weight: 600;
 }
 
 .we_design_content {
     padding-top: 20px;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -228,17 +196,7 @@
     padding-left: calc(50% - 90px);
 }
 
-
-
-
-
-
-
-
-
-
-
-
+/* Footer */
 .footer_container {
     display: flex;
     max-width: 1200px;
@@ -268,11 +226,7 @@
     width: 22%;
 }
 
-.input_place {}
-
 .footer_headers {
-    color: #2F281E;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
@@ -292,7 +246,6 @@
 .legal_stuff_item {
     color: #544837;
     text-decoration: none;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 2.6em;
